--- a/assests/css/todos.css
+++ b/assests/css/todos.css
@@ -14,6 +14,32 @@ h1 {
 ul {
     list-style: none;
 }
+
+li {
+    background: #fff;
+    height: 40px; 
+    line-height: 40px;
+    color: #666;
+}
+
+li:nth-child(2n){
+    background: #f7f7f7;
+}
+
+input{
+    font-size: 18px; 
+    color: #2980b9;
+    background-color: #f7f7f7;
+    width: 100%;
+    padding: 13px 13px 13px 20px; 
+    box-sizing: border-box;
+}
+
+input:focus{
+    background: #fff;
+    border: 3px solid #2980b9;
+    outline: none;
+}
 #container {
     width: 360px;
     margin: 100px auto;
