--- a/assests/css/todos.css
+++ b/assests/css/todos.css
@@ -44,6 +44,10 @@ input:focus{
     border: 3px solid #2980b9;
     outline: none;
 }
+.fa{
+    float:right;
+}
+
 #container {
     width: 360px;
     margin: 100px auto;
